# research_agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.cursor/rules/: 000-cursor-rules.mdc  1001-python-style.mdc  1002-python-uv.mdc  400-md-docs.mdc
src/: main.py
src/agent/: edges.py  graph.py  nodes.py  runner.py
src/agent/nodes/: __init__.py  final_answer_node.py  planner_node.py  web_search_node.py
src/models/: llm.py
src/state/: state.py
src/tools/: web_search.py
src/utils/: config.py  logging.py  prompts.py
studio/: langgraph.json  research_graph.py  simple.py
studio/.langgraph_api/: .langgraph_ops.pckl
xnotes/: 801-workflow-agile.mdc  901-prd-template.mdc  902-arch-template.mdc  903-story-template.mdc
